Doing some copyedits suggested by Copilot

--- a/2025/2025-08-17-wir.md
+++ b/2025/2025-08-17-wir.md
@@ -18,53 +18,27 @@
 
 <hr>
 
-**I've written previously** about my quest to ditch algorithmic curation of the news I consume. But as it's such an important topic — and becoming more so everyday due to low-quality ["AI slop"](https://www.axios.com/2025/08/03/ai-slop-viral-videos-content-scrolling) proliferating around the web — I want to re-share and update some of [my earlier tips](https://github.com/peteramckay/w3wnewsletter/blob/master/2024/2024-07-14.md) for improving news consumption.
+**I've written previously** about my quest to ditch algorithmic curation of the news I consume. But as it's such an important topic — and rapidly becoming more so due to low-quality ["AI slop"](https://www.axios.com/2025/08/03/ai-slop-viral-videos-content-scrolling) proliferating around the web — I want to re-share and update some of [my earlier tips](https://github.com/peteramckay/w3wnewsletter/blob/master/2024/2024-07-14.md) for improving news consumption.
 
-Most important, social simply isn’t a primary news source for me anymore, because it’s clearly pretty crappy at that particular job. This is true precisely *because* social platforms usually lean too heavily on algos that tend to make us [angrier and more extreme](https://www.psychologytoday.com/us/blog/friction/201807/why-social-media-makes-us-angrier-and-more-extreme), but not necessarily better informed.
+Most important, social simply isn’t a primary news source for me anymore, because it’s clearly pretty crappy at that particular job. This is true precisely *because* social platforms usually lean too heavily on algos that tend to make us [angrier and more extreme](https://www.psychologytoday.com/us/blog/friction/201807/why-social-media-makes-us-angrier-and-more-extreme), not more informed.
 
 Hence I'm generally spending less time on social these days, and I try to reserve it for personal updates, the occasional DM, rants [about the Mets](https://bsky.app/profile/peteramckay.bsky.social/post/3lw3662d5622t), or other [ephemera](https://bsky.app/profile/peteramckay.bsky.social/post/3lifciz2bok2y).
 
-For news, the main alternatives I seek out are feeds organized in simple [reverse chronological](https://en.wikipedia.org/wiki/Reverse_chronology#:~:text=Reverse%20chronology%20is%20a%20narrative,the%20conclusion%20to%20the%20plot.) order, often with editing and curation by (gasp!) actual humans.
+For news, the main alternatives I seek out are feeds organized in simple [reverse chronological order](https://en.wikipedia.org/wiki/Reverse_chronology#:~:text=Reverse%20chronology%20is%20a%20narrative,the%20conclusion%20to%20the%20plot.), often with editing and curation by (gasp!) actual humans.
 
 Tools that fit into these categories for me include:
 
 - **Email newsletters.** Our inboxes are perhaps the original example of reverse chronology, with everything organized simply by timestamp. Then, within each newsletter (like this one), you’re usually getting one actual person’s curated view of the world. If you get several different perspectives in this way, even better. Bingo.
 - **RSS.** Yes, this [old standby](https://rss.com/blog/how-do-rss-feeds-work/) from the early days of the blogosphere still works. My daily feed reader is [Feedly](https://feedly.com/), but there are several others out there you might choose. When you build your own subscription list in one of these things, that itself is a form of human curation.
-- **Podcasts, downloaded via my desktop podcatcher.** The qualifier in that description is really important, as the podcatcher is what cuts out the algos for me, leaving a simple reverse chronology. As a user of the [Ubuntu](https://ubuntu.com/desktop) operating system on my desktop PC, I use the default audio app [Rhythmbox](https://en.wikipedia.org/wiki/Rhythmbox) for curating my podcasts. (I can also move the downloaded audio files over to my mobile devices if necessary with Rhythmbox.) What you probably *don’t* want to use, however, is something more platform-y like Spotify or Stitcher. Those are more aggressively (and algorithmically) curated, in my experience.
-- **News organizations’ bespoke sites and apps.** Again, a somewhat old-school option here. But the plus side is that these things usually don’t have much algorithmic curation, except perhaps  for the occasional “most read stories” list or something that’s similarly pretty simple. Where the news orgs have generally been more experimental is in story presentation, design, and multimedia experience. But even with those features, you’re still getting the creative vision of human reporters, editors, and designers, not robots trying to target you with ads.
-- **The Brave web browser.** I will give this one an honorable mention on the list because I find its [default privacy safeguards](https://brave.com/) protect me well against algorithmically targeted advertising in particular. That’s not exactly pertinent to the matter of prioritizing feeds of news headlines. But it is broadly related to the theme of breaking from the major platforms’ surveillance-driven business models.
-
-<!--
-
-So what do I cut out of my daily setup in order to make room for the above? Well, as you can probably guess, I’m generally spending less time on social media these days, and I specifically try not to use it as a news source. When I’m on social, I’m much more apt to post personal updates or maybe reply to a person I know offline who’s posted something that caught my eye.
-
-But social simply isn’t a primary news source for me anymore, because it’s clearly pretty crappy at that particular job. This is true precisely *because* social platforms usually lean too heavily on algos that tend to make us [angrier and more extreme](https://www.psychologytoday.com/us/blog/friction/201807/why-social-media-makes-us-angrier-and-more-extreme), but not necessarily better informed.
-
-It's more profitable for them that way.
-
--->
+- **Podcasts, downloaded via my desktop podcatcher.** The qualifier in that description is really important, as the podcatcher is what cuts out the algos, leaving a simple reverse chronology. As a user of the [Ubuntu](https://ubuntu.com/desktop) operating system on my desktop PC, I use the default audio app [Rhythmbox](https://en.wikipedia.org/wiki/Rhythmbox) for curating my podcasts. (I can also move the downloaded audio files over to my mobile devices if necessary with Rhythmbox.) What you probably *don’t* want to use, however, is something more platform-y like Spotify or Stitcher. Those are more aggressively (and algorithmically) curated, in my experience.
+- **News organizations’ bespoke sites and apps.** Again, a somewhat old-school option here. But the plus side is that these things usually don’t have much algorithmic curation, except perhaps for the occasional “most read stories” list or something that’s similarly pretty simple. Where the news orgs have generally been more experimental is in story presentation, design, and multimedia experience. But even with those features, you’re still getting the creative vision of human reporters, editors, and designers, not robots trying to target you with ads.
+- **The Brave web browser.** I give this one an honorable mention because its [default privacy safeguards](https://brave.com/) protect me well against algorithmically targeted advertising in particular. That’s not exactly pertinent to the matter of prioritizing feeds of news headlines. But it is broadly related to the theme of breaking from the major platforms’ surveillance-driven business models.
 
 Finally, if you want to delve deeper into the underlying threats that bad algos pose to society, I highly recommend the book [Weapons of Math Destruction](https://www.penguinrandomhouse.com/books/241363/weapons-of-math-destruction-by-cathy-oneil/), by data scientist Cathy O’Neil. She does a great job of making the topic accessible to the layman, debunking the misguided idea that algos are inherently free of the ideologies of their creators, and so much more.
 
-Cathy also blogs about these sorts of issues [here](https://mathbabe.org/). And she has an [RSS feed](https://mathbabe.org/feed/)! (See what I did there?)
+Cathy also blogs about these sorts of issues [here](https://mathbabe.org/). And that blog even has an [RSS feed](https://mathbabe.org/feed/)! (See what I did there?)
 
-<!--
-That said, I will admit my alternative solution is also imperfect in some ways. True math geeks might argue, for example, that reverse chronology is itself a sort of algorithm, albeit a much simpler one than the social platforms’ inscrutable black boxes for prioritizing our feeds.
-
-There’s also no single set of rules anyone could come up with that could possibly cover every single social platform out there, with all the different features and interfaces you might choose within each app, and so on. The possibilities are just too vast to cover so easily.
-
-Nevertheless, I find the approach I described above works pretty well for me, in general.
-
-<!--
-And I’m motivated to share it because, frankly, the [awful political news in the U.S.](https://www.wsj.com/politics/elections/trump-taken-off-stage-after-apparent-shots-fired-at-rally-9d6680da?st=67c2iu2yhajek5q&reflink=desktopwebshare_permalink) this weekend is front of mind for me right now. Helping people become better news consumers is a constructive change we should talk about in its wake, I believe.
-
-On our Sunday political shows today, there was [a lot of talk](https://www.youtube.com/watch?v=HkBaKOW-OOo) about the need for politicians to “dial back” their rhetoric. It has undoubtedly grown very heated over the years and perhaps prone to encourage disturbed individuals to conduct attacks like the one against former President Trump on Saturday evening.
-
-I fully agree, our elected officials need to set a better tone. But I would add:
-
--->
-
-**For news consumers,** I believe there's a little discussed but urgent need to need to inoculate ourselves against all the rhetorical poison that circulates online everyday. We can't just leave this informational immune response up to news organizations. And we certainly can't leave it to the people running the tech platforms.
+**For news consumers,** I believe there's a little discussed but urgent need to inoculate ourselves against all the rhetorical poison that circulates online every day. We can't just leave this informational immune response up to news organizations. And we certainly can't leave it to the people running the tech platforms.
 
 We should have learned from repeated experience by now, they're simply [not going to do much](https://www.npr.org/2021/10/05/1043377310/facebook-whistleblower-frances-haugen-congress). Not when there's so much profit to be made from keeping people angry, suspicious, and distracted, regardless of the ill effects on the world around us.
 
@@ -151,7 +125,7 @@ If the rest of us want something different, we're ultimately on our own. Act acc
 
 - **Scientists in South Africa** have begun injecting rhinos' horns with mildly radioactive isotopes to deter poaching. The injections are safe for the animals but are easily detectable at airports and borders, thus helpful for arresting traffickers. ([National Public Radio](https://www.npr.org/2025/08/01/nx-s1-5488737/scientists-south-africa-rhino-horns-radioactive-poaching))
 
-- **A University of Georgia geologist** has determined that a meteorite that crashed through the roof of a home outside Atlanta in June is 20 million years older than earth. ([CBS News](https://www.cbsnews.com/news/meteorite-georgia-nasa-earth/))
+- **A University of Georgia geologist** has determined that a meteorite that crashed through the roof of a home outside Atlanta in June is 20 million years older than Earth. ([CBS News](https://www.cbsnews.com/news/meteorite-georgia-nasa-earth/))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
