More copyedits by me

--- a/2025/2025-08-17-wir.md
+++ b/2025/2025-08-17-wir.md
@@ -28,7 +28,7 @@ For news, the main alternatives I seek out are feeds organized in simple [revers
 
 Tools that fit into these categories for me include:
 
-- **Email newsletters.** Our inboxes are perhaps the original example of reverse chronology, with everything organized simply by timestamp. Then, within each newsletter (like this one), you’re usually getting one actual person’s curated view of the world. If you get several different perspectives in this way, even better. Bingo.
+- **Email newsletters.** Our inboxes are perhaps the original example of reverse chronology, with everything organized simply by timestamp. Then, within each newsletter (like this one), you’re usually getting one actual person’s curated view of the world. Bingo.
 - **RSS.** Yes, this [old standby](https://rss.com/blog/how-do-rss-feeds-work/) from the early days of the blogosphere still works. My daily feed reader is [Feedly](https://feedly.com/), but there are several others out there you might choose. When you build your own subscription list in one of these things, that itself is a form of human curation.
 - **Podcasts, downloaded via my desktop podcatcher.** The qualifier in that description is really important, as the podcatcher is what cuts out the algos, leaving a simple reverse chronology. As a user of the [Ubuntu](https://ubuntu.com/desktop) operating system on my desktop PC, I use the default audio app [Rhythmbox](https://en.wikipedia.org/wiki/Rhythmbox) for curating my podcasts. (I can also move the downloaded audio files over to my mobile devices if necessary with Rhythmbox.) What you probably *don’t* want to use, however, is something more platform-y like Spotify or Stitcher. Those are more aggressively (and algorithmically) curated, in my experience.
 - **News organizations’ bespoke sites and apps.** Again, a somewhat old-school option here. But the plus side is that these things usually don’t have much algorithmic curation, except perhaps for the occasional “most read stories” list or something that’s similarly pretty simple. Where the news orgs have generally been more experimental is in story presentation, design, and multimedia experience. But even with those features, you’re still getting the creative vision of human reporters, editors, and designers, not robots trying to target you with ads.
