Adding header image + writethrough in all sections

--- a/2025/2025-08-24-wir.md
+++ b/2025/2025-08-24-wir.md
@@ -1,8 +1,8 @@
 # TKTK
 ## TKTK
 
-![Stack of newspapers with a smartphone and a pen on top](https://w3w.news/img/megan-lee-3840.jpg)
-*Photo illustration by Megan Lee via Unsplash*
+![File photo of VC Marc Andreessen speacking at the TechCrunch Disrupt conference in 2016](https://upload.wikimedia.org/wikipedia/commons/e/ee/TechCrunch_Disrupt_SF_2016_-_Day_2.jpg)
+*File photo of venture investor Marc Andreessen speaking at TechCrunch Disrupt in 2016. Unedited photo by Steve Jennings via Wikimedia Commons under CC 2.0 [license](https://creativecommons.org/licenses/by/2.0/deed.en).*
 
 <hr>
 
@@ -20,15 +20,39 @@
 
 **Lead item goes here.** Yadda yadda yadda.
 
+- Digital asset treasuries' growth is outpacing VC investment lately. Wow. https://www.theblock.co/post/367485/digital-asset-treasuries-eclipse-venture-funding-as-companies-raise-15-billion-in-2025
+
+- BitMine Adds $1.7 Billion in Ethereum, Now Second Behind Strategy in Crypto Treasury Rankings. https://decrypt.co/335613/bitmine-adds-1-7-billion-ethereum-second-strategy-crypto-treasury
+
+- https://www.theblock.co/post/367749/ethereum-treasuries-surpass-17-billion
+
+- https://decrypt.co/336128/silicon-valley-throws-100m-at-ai-powered-mattress-with-a-subscription
+
+- https://www.forbes.com/sites/juliegoldenberg/2025/08/19/whos-getting-rich-off-the-100-billion-crypto-treasury-boom/
+
 ### Five Things: Aug. 17-23, 2025
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- TK
-- TK
-- TK
-- TK
-- TK
+- The Bitcoin network's hashrate and mining difficulty are soaring. https://decrypt.co/335878/bitcoin-hashrate-soars-fees-below-1-percent
+
+- **A wave of new stablecoins:** Bullish settled payments on its IPO with $1.2B in stablecoin payments. <!-- Link TK --> | Wyoming rolled out its own stablecoin. <!-- Link TK --> | https://www.theblock.co/post/367713/metamask-musd-stablecoin-ethereum-linea-stripe-bridge | Coinbase is looking to add World Liberty Financial's stablecoin: https://www.theblock.co/post/367810/trump-backed-world-liberty-stablecoin-added-to-coinbase-roadmap-possible-listing-coming
+
+- Meta announced a restructuring of its AI efforts. Link TK
+
+- Scaramucci's SkyBridge Capital plans to tokenize $300M in hedge fund shares. Link TK.
+
+- **Mixed news on privacy:** UK dropped request that Apple build back doors into its products. Link TK | Federal prosecutors have charged a 22-year-old Oregon man with operating a vast network of hacked devices that may be the largest botnet ever. https://www.wsj.com/tech/oregon-man-accused-of-operating-one-of-most-powerful-attack-botnets-ever-seen-380b2caf
+
+
+<!--
+
+Leftovers...
+
+
+- A federal appeals court handed SpaceX a win on Tuesday, in a ruling that prevents the National Labor Relations Board from prosecuting unfair labor practices against the company. The ruling by the Fifth District Court of Appeals, which suggests the structure of the NLRB is likely unconstitutional, could have far-reaching effects. https://techcrunch.com/2025/08/19/appeals-court-says-nlrb-structure-unconstitutional-in-a-win-for-spacex/
+
+-->
 
 ### Market Snapshot
 
@@ -88,14 +112,17 @@
 
 ### Looking Ahead
 
-- TK
-- TK
-- TK
+- **Tech deals on the way?** OpenAI is in talks that would value the company at $500 billion, the largest capitalization of any privately held company in the world. https://www.nytimes.com/2025/08/19/technology/openai-chatgpt-stock-sale-valuation.html | The White House is considering taking a 10% stake in Intel. SoftBank is eyeing a bid as well. <!-- Check for followups. Links tk. -->
+
+- Making money off AI slop: https://www.washingtonpost.com/technology/2025/08/17/ai-video-slop-creators/
+
+- Mental health pros are beginning to discuss the phenomenon of "AI psychosis." The informal term, which is not a formal diagnosis, refers to anecdotal evidence of some people forming delusional beliefs after spending hours communicating with AI chatbots. https://www.washingtonpost.com/health/2025/08/19/ai-psychosis-chatgpt-explained-mental-health/
 
 ### Odds & Ends
 
-- TK
-- TK
+- Why does no one in America buy Google's high-end Pixel phones? News coverage of new release: https://decrypt.co/336156/google-pixel-10-lineup-ai-features-new-watch-earbuds The Washington Post's Shira Ovide investigates the weak sales of the line, historically. https://www.washingtonpost.com/technology/2025/08/19/best-android-phone-google-pixel-apple-samsung/ | Google is way better than Apple at integrating AI into its phones. https://www.theverge.com/tech/760372/made-by-google-2025-pixel-10-gemini
+
+- Bottles of strawberry milk perfume are selling for $1,000 a piece. https://www.salon.com/2025/08/12/how-strawberry-milk-went-luxe/
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
