--- a/2025/2025-08-24-wir.md
+++ b/2025/2025-08-24-wir.md
@@ -6,13 +6,9 @@
 
 <hr>
 
+- _**Before we begin, a big thank-you to w3w's paid subscribers!** To join them in supporting this work, please check out our paid plans [on Substack](https://w3wnews.substack.com/subscribe)._
+
 - _**I used several AI apps** to assist production of this edition of w3w. Final edit 100% by me. For fuller detail, see the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub._
-
-<!--
-
-- _**A big thank-you to w3w's paid subscribers!** To join them in supporting this work, please check out our paid plans [on Substack](https://w3wnews.substack.com/subscribe)._
-
--->
 
 - _**I'm also happy to highlight our affiliate,** award-winning designer Kate Zimina of [Roobinium](https://dribbble.com/roobinium). To get Kate's help on your next web3 project, email digitaldesigner2047@gmail.com or DM the Telegram handle @digitaldesigner2047._
 
@@ -20,39 +16,29 @@
 
 **Lead item goes here.** Yadda yadda yadda.
 
-- Digital asset treasuries' growth is outpacing VC investment lately. Wow. https://www.theblock.co/post/367485/digital-asset-treasuries-eclipse-venture-funding-as-companies-raise-15-billion-in-2025
+- Companies have raised over $15 billion in digital-asset treasuries through August 2025, marking a pivotal shift as this strategy now outpaces traditional crypto venture funding—which has seen deal volume nearly halve compared to last year—underscoring the growing corporate embrace of crypto holdings as strategic assets. ([The Block](https://www.theblock.co/post/367485/digital-asset-treasuries-eclipse-venture-funding-as-companies-raise-15-billion-in-2025)) <!-- Draft news summary by ChatGPT -->
+ 
+- BitMine Immersion Technologies sharply expanded its Ethereum reserves last week by acquiring around 373,000 ETH (≈ $1.7 billion), bringing its total to over $6.6 billion—more than 1 percent of all ETH in circulation—and cementing its place as the second-largest crypto treasury by this metric. ([Decrypt](https://decrypt.co/335613/bitmine-adds-1-7-billion-ethereum-second-strategy-crypto-treasury)) <!-- Draft news summary by ChatGPT -->
 
-- BitMine Adds $1.7 Billion in Ethereum, Now Second Behind Strategy in Crypto Treasury Rankings. https://decrypt.co/335613/bitmine-adds-1-7-billion-ethereum-second-strategy-crypto-treasury
+- The combined Ethereum holdings of 69 treasury entities now surpass 4.1 million ETH, valued at approximately $17–17.6 billion, highlighting the accelerating accumulation of ETH by institutional and corporate treasuries. ([The Block](https://www.theblock.co/post/367749/ethereum-treasuries-surpass-17-billion)) <!-- Draft news summary by ChatGPT --> 
 
-- https://www.theblock.co/post/367749/ethereum-treasuries-surpass-17-billion
+- Silicon Valley investors have poured $100 million into a luxury, AI-enhanced mattress system—starting at $2,500 for the topper and more than $4,000 for the full setup—paired with a $17–$25 monthly subscription for extra features, with high-profile users like Elon Musk, Mark Zuckerberg, Scarlett Johansson, and biohacker Bryan Johnson fueling its hype and a rumored $500 million valuation. ([Decrypt](https://decrypt.co/336128/silicon-valley-throws-100m-at-ai-powered-mattress-with-a-subscription))
 
-- https://decrypt.co/336128/silicon-valley-throws-100m-at-ai-powered-mattress-with-a-subscription
-
-- https://www.forbes.com/sites/juliegoldenberg/2025/08/19/whos-getting-rich-off-the-100-billion-crypto-treasury-boom/
+- The real winners in the soaring $100 billion crypto treasury boom aren’t the projects themselves but the "picks‑and‑shovels" businesses—custodians, brokers, and asset managers—who stand to reap the bulk of profit from institutional crypto treasury activity. ([Forbes](https://www.forbes.com/sites/juliegoldenberg/2025/08/19/whos-getting-rich-off-the-100-billion-crypto-treasury-boom/)) <!-- Draft news summary by ChatGPT -->
 
 ### Five Things: Aug. 17-23, 2025
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- The Bitcoin network's hashrate and mining difficulty are soaring. https://decrypt.co/335878/bitcoin-hashrate-soars-fees-below-1-percent
+- **Market updates:** Big rally Friday on Powell remarks, hopes for a US rate cut in September. Link TK... | Bitcoin miners are feeling the squeeze as network difficulty skyrockets to a record 129 trillion, hash prices fall to ~$60 per petahash, and transaction fees dip below 1 percent of block rewards for the first time ever, signaling shrinking margins and mounting economic pressure. ([Decrypt](https://decrypt.co/335878/bitcoin-hashrate-soars-fees-below-1-percent)) <!-- Draft news summary by ChatGPT -->
 
-- **A wave of new stablecoins:** Bullish settled payments on its IPO with $1.2B in stablecoin payments. <!-- Link TK --> | Wyoming rolled out its own stablecoin. <!-- Link TK --> | https://www.theblock.co/post/367713/metamask-musd-stablecoin-ethereum-linea-stripe-bridge | Coinbase is looking to add World Liberty Financial's stablecoin: https://www.theblock.co/post/367810/trump-backed-world-liberty-stablecoin-added-to-coinbase-roadmap-possible-listing-coming
+- **A wave of new stablecoins:** Bullish settled payments on its IPO with $1.2B in stablecoin payments. <!-- Link TK --> | Wyoming rolled out its own stablecoin. <!-- Link TK --> | MetaMask has unleashed its first-ever native stablecoin, MetaMask USD (mUSD)—fully integrated into the wallet ecosystem via Bridge (a Stripe unit) and powered by M0—launching initially on Ethereum and Linea, and soon usable for on-chain activities and real-world purchases via a MetaMask Mastercard. ([The Block](https://www.theblock.co/post/367713/metamask-musd-stablecoin-ethereum-linea-stripe-bridge)) | World Liberty Financial’s USD1 stablecoin, backed by Treasury bills and cash equivalents, has been added to Coinbase’s listing roadmap—and shortly listed—following a minting of $205 million new tokens that brought total circulation to $2.4 billion, marking a significant expansion for the Trump-backed crypto project. ([The Block](https://www.theblock.co/post/367810/trump-backed-world-liberty-stablecoin-added-to-coinbase-roadmap-possible-listing-coming))  <!-- Draft news summaries by ChatGPT -->
 
 - Meta announced a restructuring of its AI efforts. Link TK
 
 - Scaramucci's SkyBridge Capital plans to tokenize $300M in hedge fund shares. Link TK.
 
-- **Mixed news on privacy:** UK dropped request that Apple build back doors into its products. Link TK | Federal prosecutors have charged a 22-year-old Oregon man with operating a vast network of hacked devices that may be the largest botnet ever. https://www.wsj.com/tech/oregon-man-accused-of-operating-one-of-most-powerful-attack-botnets-ever-seen-380b2caf
-
-
-<!--
-
-Leftovers...
-
-
-- A federal appeals court handed SpaceX a win on Tuesday, in a ruling that prevents the National Labor Relations Board from prosecuting unfair labor practices against the company. The ruling by the Fifth District Court of Appeals, which suggests the structure of the NLRB is likely unconstitutional, could have far-reaching effects. https://techcrunch.com/2025/08/19/appeals-court-says-nlrb-structure-unconstitutional-in-a-win-for-spacex/
-
--->
+- **Mixed news on privacy:** UK dropped request that Apple build back doors into its products. Link TK | Federal prosecutors [charged a 22-year-old Oregon man](https://www.wsj.com/tech/oregon-man-accused-of-operating-one-of-most-powerful-attack-botnets-ever-seen-380b2caf?st=tzBB1N&reflink=desktopwebshare_permalink) with operating a vast network of hacked devices that may be the largest botnet ever. 
 
 ### Market Snapshot
 
@@ -112,17 +98,17 @@ Leftovers...
 
 ### Looking Ahead
 
-- **Tech deals on the way?** OpenAI is in talks that would value the company at $500 billion, the largest capitalization of any privately held company in the world. https://www.nytimes.com/2025/08/19/technology/openai-chatgpt-stock-sale-valuation.html | The White House is considering taking a 10% stake in Intel. SoftBank is eyeing a bid as well. <!-- Check for followups. Links tk. -->
+- A proliferation of AI‑generated “slop” videos—bizarre, low‑effort yet alarmingly convincing clips—are being mass‑produced and monetized by creators flooding the internet, illustrating how absurd digital content can become profitable in our AI‑driven era. ([Washington Post](https://www.washingtonpost.com/technology/2025/08/17/ai-video-slop-creators/)) <!-- Draft news summary by ChatGPT -->
 
-- Making money off AI slop: https://www.washingtonpost.com/technology/2025/08/17/ai-video-slop-creators/
+- **Tech deals on the way?** OpenAI is in final talks to facilitate a $6 billion secondary share sale by employees and former staffers to investors such as SoftBank and Thrive Capital—potentially catapulting the company’s valuation to $500 billion, making it the most valuable private firm globally—surpassing even SpaceX. ([New York Times](https://www.nytimes.com/2025/08/19/technology/openai-chatgpt-stock-sale-valuation.html)) <!-- Draft news summary by ChatGPT --> | The White House is considering taking a 10% stake in Intel. SoftBank is eyeing a bid as well. <!-- Check for followups. Links tk. -->
 
-- Mental health pros are beginning to discuss the phenomenon of "AI psychosis." The informal term, which is not a formal diagnosis, refers to anecdotal evidence of some people forming delusional beliefs after spending hours communicating with AI chatbots. https://www.washingtonpost.com/health/2025/08/19/ai-psychosis-chatgpt-explained-mental-health/
+- Mental health specialists caution that while “AI psychosis” isn’t a clinical diagnosis, it’s an increasingly used term to describe alarming patterns of delusional thinking, emotional dependency, and distorted reality emerging in some users after extended interaction with chatbots––a phenomenon they say is real enough to warrant urgent attention, further study, and guidance for those at risk. ([Washington Post](https://www.washingtonpost.com/health/2025/08/19/ai-psychosis-chatgpt-explained-mental-health/)) <!-- Draft news summary by ChatGPT -->
 
 ### Odds & Ends
 
-- Why does no one in America buy Google's high-end Pixel phones? News coverage of new release: https://decrypt.co/336156/google-pixel-10-lineup-ai-features-new-watch-earbuds The Washington Post's Shira Ovide investigates the weak sales of the line, historically. https://www.washingtonpost.com/technology/2025/08/19/best-android-phone-google-pixel-apple-samsung/ | Google is way better than Apple at integrating AI into its phones. https://www.theverge.com/tech/760372/made-by-google-2025-pixel-10-gemini
+- Google’s new Pixel 10 lineup, powered by the on‑device Gemini AI and the powerful Tensor G5 chip, introduces smart features like Magic Cue contextual suggestions, Camera Coach photo assist, and expressive AI tools across phones, the Pixel Watch 4, and Pixel Buds—aimed at making your devices not just smarter, but intuitively helpful. ([The Verge] | Despite earning kudos for quality and competitive pricing, Google’s Pixel phones remain niche in the U.S. market, under‑purchased compared to flagship devices from Apple and Samsung—even as they push cutting‑edge features.  ([Washington Post](https://www.washingtonpost.com/technology/2025/08/19/best-android-phone-google-pixel-apple-samsung/)) (https://www.theverge.com/tech/760372/made-by-google-2025-pixel-10-gemini)) <!-- Draft news summaries by ChatGPT -->
 
-- Bottles of strawberry milk perfume are selling for $1,000 a piece. https://www.salon.com/2025/08/12/how-strawberry-milk-went-luxe/
+- Salon highlights the extreme “gourmand” perfume trend through the comeback of Cry Baby Milk—a strawberry‑milk‑and‑caramel scent reselling for up to $800–$1,000—turning nostalgic childhood aromas into a high‑end collectible with cult status. Bottles of strawberry milk perfume are selling for $1,000 a piece. ([Salon](https://www.salon.com/2025/08/12/how-strawberry-milk-went-luxe/)) <!-- Draft news summary by ChatGPT -->
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
