--- a/2025/2025-08-24-wir.md
+++ b/2025/2025-08-24-wir.md
@@ -1,36 +1,5 @@
-# TKTK
-## TKTK
 
-![File photo of VC Marc Andreessen speacking at the TechCrunch Disrupt conference in 2016](https://upload.wikimedia.org/wikipedia/commons/e/ee/TechCrunch_Disrupt_SF_2016_-_Day_2.jpg)
-*File photo of venture investor Marc Andreessen speaking at TechCrunch Disrupt in 2016. Unedited photo by Steve Jennings via Wikimedia Commons under CC 2.0 [license](https://creativecommons.org/licenses/by/2.0/deed.en).*
-
-<hr>
-
-- _**Before we begin, a big thank-you to w3w's paid subscribers!** To join them in supporting this work, please check out our paid plans [on Substack](https://w3wnews.substack.com/subscribe)._
-
-- _**I used several AI apps** to assist production of this edition of w3w. Final edit 100% by me. For fuller detail, see the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub._
-
-- _**I'm also happy to highlight our affiliate,** award-winning designer Kate Zimina of [Roobinium](https://dribbble.com/roobinium). To get Kate's help on your next web3 project, email digitaldesigner2047@gmail.com or DM the Telegram handle @digitaldesigner2047._
-
-<hr>
-
-**Lead item goes here.** Yadda yadda yadda.
-
-- Companies have raised over $15 billion in digital-asset treasuries through August 2025, marking a pivotal shift as this strategy now outpaces traditional crypto venture funding—which has seen deal volume nearly halve compared to last year—underscoring the growing corporate embrace of crypto holdings as strategic assets. ([The Block](https://www.theblock.co/post/367485/digital-asset-treasuries-eclipse-venture-funding-as-companies-raise-15-billion-in-2025)) <!-- Draft news summary by ChatGPT -->
- 
-- BitMine Immersion Technologies sharply expanded its Ethereum reserves last week by acquiring around 373,000 ETH (≈ $1.7 billion), bringing its total to over $6.6 billion—more than 1 percent of all ETH in circulation—and cementing its place as the second-largest crypto treasury by this metric. ([Decrypt](https://decrypt.co/335613/bitmine-adds-1-7-billion-ethereum-second-strategy-crypto-treasury)) <!-- Draft news summary by ChatGPT -->
-
-- The combined Ethereum holdings of 69 treasury entities now surpass 4.1 million ETH, valued at approximately $17–17.6 billion, highlighting the accelerating accumulation of ETH by institutional and corporate treasuries. ([The Block](https://www.theblock.co/post/367749/ethereum-treasuries-surpass-17-billion)) <!-- Draft news summary by ChatGPT --> 
-
-- Silicon Valley investors have poured $100 million into a luxury, AI-enhanced mattress system—starting at $2,500 for the topper and more than $4,000 for the full setup—paired with a $17–$25 monthly subscription for extra features, with high-profile users like Elon Musk, Mark Zuckerberg, Scarlett Johansson, and biohacker Bryan Johnson fueling its hype and a rumored $500 million valuation. ([Decrypt](https://decrypt.co/336128/silicon-valley-throws-100m-at-ai-powered-mattress-with-a-subscription))
-
-- The real winners in the soaring $100 billion crypto treasury boom aren’t the projects themselves but the "picks‑and‑shovels" businesses—custodians, brokers, and asset managers—who stand to reap the bulk of profit from institutional crypto treasury activity. ([Forbes](https://www.forbes.com/sites/juliegoldenberg/2025/08/19/whos-getting-rich-off-the-100-billion-crypto-treasury-boom/)) <!-- Draft news summary by ChatGPT -->
-
-### Five Things: Aug. 17-23, 2025
-
-*The week's top headlines about emerging technologies and trends reshaping the web:*
-
-- **Market updates:** Big rally Friday on Powell remarks, hopes for a US rate cut in September. Link TK... | Bitcoin miners are feeling the squeeze as network difficulty skyrockets to a record 129 trillion, hash prices fall to ~$60 per petahash, and transaction fees dip below 1 percent of block rewards for the first time ever, signaling shrinking margins and mounting economic pressure. ([Decrypt](https://decrypt.co/335878/bitcoin-hashrate-soars-fees-below-1-percent)) <!-- Draft news summary by ChatGPT -->
+- **Token prices ended** an otherwise humdrum week [with a flourish](https://www.msn.com/en-us/money/markets/bitcoin-and-crypto-stocks-surge-as-powells-rate-cut-hint-revives-risk-appetite/ar-AA1L2Er8?ocid=BingNewsVerp) Friday after remarks from Federal Reserve Chairman Jerome Powell signaled that America's central bank may cut its benchmark interest-rate target soon. Bitcoin leapt 4% Friday to finish around break-even for the week. Bitcoin's price remains shy of its rent all-time highs, but miners are nevertheless [feeling squeezed](https://decrypt.co/335878/bitcoin-hashrate-soars-fees-below-1-percent) by recent records in the Bitcoin network's hashrate. That makes it more difficult and less profitable for miners to verify transactions and mint new tokens. 
 
 - **A wave of new stablecoins:** Bullish settled payments on its IPO with $1.2B in stablecoin payments. <!-- Link TK --> | Wyoming rolled out its own stablecoin. <!-- Link TK --> | MetaMask has unleashed its first-ever native stablecoin, MetaMask USD (mUSD)—fully integrated into the wallet ecosystem via Bridge (a Stripe unit) and powered by M0—launching initially on Ethereum and Linea, and soon usable for on-chain activities and real-world purchases via a MetaMask Mastercard. ([The Block](https://www.theblock.co/post/367713/metamask-musd-stablecoin-ethereum-linea-stripe-bridge)) | World Liberty Financial’s USD1 stablecoin, backed by Treasury bills and cash equivalents, has been added to Coinbase’s listing roadmap—and shortly listed—following a minting of $205 million new tokens that brought total circulation to $2.4 billion, marking a significant expansion for the Trump-backed crypto project. ([The Block](https://www.theblock.co/post/367810/trump-backed-world-liberty-stablecoin-added-to-coinbase-roadmap-possible-listing-coming))  <!-- Draft news summaries by ChatGPT -->
 
@@ -106,7 +75,7 @@
 
 ### Odds & Ends
 
-- Google’s new Pixel 10 lineup, powered by the on‑device Gemini AI and the powerful Tensor G5 chip, introduces smart features like Magic Cue contextual suggestions, Camera Coach photo assist, and expressive AI tools across phones, the Pixel Watch 4, and Pixel Buds—aimed at making your devices not just smarter, but intuitively helpful. ([The Verge] | Despite earning kudos for quality and competitive pricing, Google’s Pixel phones remain niche in the U.S. market, under‑purchased compared to flagship devices from Apple and Samsung—even as they push cutting‑edge features.  ([Washington Post](https://www.washingtonpost.com/technology/2025/08/19/best-android-phone-google-pixel-apple-samsung/)) (https://www.theverge.com/tech/760372/made-by-google-2025-pixel-10-gemini)) <!-- Draft news summaries by ChatGPT -->
+- **Google’s unveiled** its [new lineup](https://www.wired.com/story/google-pixel-10-series-pixel-watch-4-pixel-buds-2a/) of Pixel devices, emphasizing [AI features](https://www.cnbc.com/2025/08/21/google-pixel-10-launch-a-strategic-ai-play-with-gemini.html) to take on Apple's iPhone more directly. Early reviews have generally ben [favorable](https://www.androidcentral.com/phones/google-pixel/google-pixel-10-hands-on). But the Washington Post's Shira Ovide says Google nevertheless faces an uphill battle for market share. From early on, the search giant has positioned the Pixel line as an Android flagship. But Ovide notes that historically [hasn't translated](https://www.washingtonpost.com/technology/2025/08/19/best-android-phone-google-pixel-apple-samsung/) into strong sales.
 
 - Salon highlights the extreme “gourmand” perfume trend through the comeback of Cry Baby Milk—a strawberry‑milk‑and‑caramel scent reselling for up to $800–$1,000—turning nostalgic childhood aromas into a high‑end collectible with cult status. Bottles of strawberry milk perfume are selling for $1,000 a piece. ([Salon](https://www.salon.com/2025/08/12/how-strawberry-milk-went-luxe/)) <!-- Draft news summary by ChatGPT -->
 
