Adding final weekly market data + writethrough in all sections

--- a/2025/2025-08-24-wir.md
+++ b/2025/2025-08-24-wir.md
@@ -1,5 +1,46 @@
+# TKTK
+## TKTKTK
 
-- **Token prices ended** an otherwise humdrum week [with a flourish](https://www.msn.com/en-us/money/markets/bitcoin-and-crypto-stocks-surge-as-powells-rate-cut-hint-revives-risk-appetite/ar-AA1L2Er8?ocid=BingNewsVerp) Friday after remarks from Federal Reserve Chairman Jerome Powell signaled that America's central bank may cut its benchmark interest-rate target soon. Bitcoin leapt 4% Friday to finish around break-even for the week. Bitcoin's price remains shy of its rent all-time highs, but miners are nevertheless [feeling squeezed](https://decrypt.co/335878/bitcoin-hashrate-soars-fees-below-1-percent) by recent records in the Bitcoin network's hashrate. That makes it more difficult and less profitable for miners to verify transactions and mint new tokens. 
+![File photo of VC Marc Andreessen speaking at the TechCrunch Disrupt conference in 2016](https://upload.wikimedia.org/wikipedia/commons/e/ee/TechCrunch_Disrupt_SF_2016_-_Day_2.jpg)
+*File photo of venture investor Marc Andreessen speaking at TechCrunch Disrupt in 2016. Unedited photo by Steve Jennings via Wikimedia Commons under CC 2.0 [license](https://creativecommons.org/licenses/by/2.0/deed.en).*
+
+<hr>
+
+- _**Before we begin, a big thank-you to w3w's paid subscribers!** To join them in supporting this work, please check out our paid plans [on Substack](https://w3wnews.substack.com/subscribe)._
+
+- _**I used several AI apps** to assist production of this edition of w3w. Final edit 100% by me. For fuller detail, see the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub._
+
+- _**I'm also happy to highlight our affiliate,** award-winning designer Kate Zimina of [Roobinium](https://dribbble.com/roobinium). To get Kate's help on your next web3 project, email digitaldesigner2047@gmail.com or DM the Telegram handle @digitaldesigner2047._
+
+<hr>
+
+**Lead item goes here.** Yadda yadda yadda.
+
+- Digital asset treasuries' growth is outpacing VC investment lately. Wow. https://www.theblock.co/post/367485/digital-asset-treasuries-eclipse-venture-funding-as-companies-raise-15-billion-in-2025
+
+- BitMine Adds $1.7 Billion in Ethereum, Now Second Behind Strategy in Crypto Treasury Rankings. https://decrypt.co/335613/bitmine-adds-1-7-billion-ethereum-second-strategy-crypto-treasury
+- Companies have raised over $15 billion in digital-asset treasuries through August 2025, marking a pivotal shift as this strategy now outpaces traditional crypto venture funding—which has seen deal volume nearly halve compared to last year—underscoring the growing corporate embrace of crypto holdings as strategic assets. ([The Block](https://www.theblock.co/post/367485/digital-asset-treasuries-eclipse-venture-funding-as-companies-raise-15-billion-in-2025)) <!-- Draft news summary by ChatGPT -->
+
+- BitMine Immersion Technologies sharply expanded its Ethereum reserves last week by acquiring around 373,000 ETH (≈ $1.7 billion), bringing its total to over $6.6 billion—more than 1 percent of all ETH in circulation—and cementing its place as the second-largest crypto treasury by this metric. ([Decrypt](https://decrypt.co/335613/bitmine-adds-1-7-billion-ethereum-second-strategy-crypto-treasury)) <!-- Draft news summary by ChatGPT -->
+
+- https://www.theblock.co/post/367749/ethereum-treasuries-surpass-17-billion
+- The combined Ethereum holdings of 69 treasury entities now surpass 4.1 million ETH, valued at approximately $17–17.6 billion, highlighting the accelerating accumulation of ETH by institutional and corporate treasuries. ([The Block](https://www.theblock.co/post/367749/ethereum-treasuries-surpass-17-billion)) <!-- Draft news summary by ChatGPT -->
+
+- https://decrypt.co/336128/silicon-valley-throws-100m-at-ai-powered-mattress-with-a-subscription
+- Silicon Valley investors have poured $100 million into a luxury, AI-enhanced mattress system—starting at $2,500 for the topper and more than $4,000 for the full setup—paired with a $17–$25 monthly subscription for extra features, with high-profile users like Elon Musk, Mark Zuckerberg, Scarlett Johansson, and biohacker Bryan Johnson fueling its hype and a rumored $500 million valuation. ([Decrypt](https://decrypt.co/336128/silicon-valley-throws-100m-at-ai-powered-mattress-with-a-subscription))
+
+
+- **Tech deals on the way?** OpenAI is in final talks to facilitate a $6 billion secondary share sale by employees and former staffers to investors such as SoftBank and Thrive Capital—potentially catapulting the company’s valuation to $500 billion, making it the most valuable private firm globally—surpassing even SpaceX. ([New York Times](https://www.nytimes.com/2025/08/19/technology/openai-chatgpt-stock-sale-valuation.html)) <!-- Draft news summary by ChatGPT --> | The White House is considering taking a 10% stake in Intel. SoftBank is eyeing a bid as well. <!-- Check for followups. Links tk. -->
+
+
+- https://www.forbes.com/sites/juliegoldenberg/2025/08/19/whos-getting-rich-off-the-100-billion-crypto-treasury-boom/
+- The real winners in the soaring $100 billion crypto treasury boom aren’t the projects themselves but the "picks‑and‑shovels" businesses—custodians, brokers, and asset managers—who stand to reap the bulk of profit from institutional crypto treasury activity. ([Forbes](https://www.forbes.com/sites/juliegoldenberg/2025/08/19/whos-getting-rich-off-the-100-billion-crypto-treasury-boom/)) <!-- Draft news summary by ChatGPT -->
+
+### Five Things: Aug. 17-23, 2025
+
+*The week's top headlines about emerging technologies and trends reshaping the web:*
+
+- **Token prices ended** an otherwise humdrum week on Wall Street [with a flourish](https://www.msn.com/en-us/money/markets/bitcoin-and-crypto-stocks-surge-as-powells-rate-cut-hint-revives-risk-appetite/ar-AA1L2Er8?ocid=BingNewsVerp) Friday after remarks from Federal Reserve Chairman Jerome Powell signaled that America's central bank may cut its benchmark interest-rate target soon. Bitcoin leapt 4% Friday to finish around break-even for the week. Bitcoin's price remains shy of its all-time highs, but miners are nevertheless [feeling squeezed](https://decrypt.co/335878/bitcoin-hashrate-soars-fees-below-1-percent) by recent records in the Bitcoin network's hashrate. That makes it more difficult and less profitable for miners to verify transactions and mint new tokens.
 
 - **A wave of new stablecoins:** Bullish settled payments on its IPO with $1.2B in stablecoin payments. <!-- Link TK --> | Wyoming rolled out its own stablecoin. <!-- Link TK --> | MetaMask has unleashed its first-ever native stablecoin, MetaMask USD (mUSD)—fully integrated into the wallet ecosystem via Bridge (a Stripe unit) and powered by M0—launching initially on Ethereum and Linea, and soon usable for on-chain activities and real-world purchases via a MetaMask Mastercard. ([The Block](https://www.theblock.co/post/367713/metamask-musd-stablecoin-ethereum-linea-stripe-bridge)) | World Liberty Financial’s USD1 stablecoin, backed by Treasury bills and cash equivalents, has been added to Coinbase’s listing roadmap—and shortly listed—following a minting of $205 million new tokens that brought total circulation to $2.4 billion, marking a significant expansion for the Trump-backed crypto project. ([The Block](https://www.theblock.co/post/367810/trump-backed-world-liberty-stablecoin-added-to-coinbase-roadmap-possible-listing-coming))  <!-- Draft news summaries by ChatGPT -->
 
@@ -7,13 +48,11 @@
 
 - Scaramucci's SkyBridge Capital plans to tokenize $300M in hedge fund shares. Link TK.
 
-- **Mixed news on privacy:** UK dropped request that Apple build back doors into its products. Link TK | Federal prosecutors [charged a 22-year-old Oregon man](https://www.wsj.com/tech/oregon-man-accused-of-operating-one-of-most-powerful-attack-botnets-ever-seen-380b2caf?st=tzBB1N&reflink=desktopwebshare_permalink) with operating a vast network of hacked devices that may be the largest botnet ever. 
+- **Federal prosecutors charged** a 22-year-old Oregon man with operating a vast network of hacked devices that may be the largest botnet ever. ([Wall Street Journal](https://www.wsj.com/tech/oregon-man-accused-of-operating-one-of-most-powerful-attack-botnets-ever-seen-380b2caf?st=tzBB1N&reflink=desktopwebshare_permalink))
 
 ### Market Snapshot
 
 *A quick look at some major indicators as of Friday's market close on Wall Street:*
-
-<!-- Preliminary data is below for now. Need to update after Friday's close. -->
 
 <table>
 
@@ -29,37 +68,37 @@
   <tbody>
    <tr>
      <td>Bitcoin</td>
-     <td>$113,696.64</td>
-     <td>-2.8%</td>
-     <td>+21.1%</td>
+     <td>$116,735.32</td>
+     <td>-0.2%</td>
+     <td>+24.4%</td>
    </tr>
 
    <tr>
      <td>Nasdaq 100</td>
-     <td>23,185.67</td>
-     <td>-2.2%</td>
-     <td>+10.3%</td>
+     <td>23,498.12</td>
+     <td>-0.9%</td>
+     <td>+11.8%</td>
    </tr>
 
    <tr>
      <td>Gold</td>
-     <td>$3,381.50/oz</td>
-     <td>0%</td>
-     <td>+28.6%</td>
+     <td>$3,418.50/oz</td>
+     <td>+1.1%</td>
+     <td>+30%</td>
    </tr>
 
    <tr>
      <td>USD Index</td>
-     <td>98.47</td>
-     <td>+0.6%</td>
-     <td>-9.2%</td>
+     <td>97.73</td>
+     <td>-0.1%</td>
+     <td>-9.9%</td>
    </tr>
 
    <tr>
      <td>10-yr U.S.<br> Treasury Yield</td>
-     <td>4.3260%</td>
-     <td>-0.0020</td>
-     <td>-0.2470</td>
+     <td>4.2600%</td>
+     <td>-0.0680</td>
+     <td>-0.3130</td>
    </tr>
 
 </tbody>
@@ -67,17 +106,15 @@
 
 ### Looking Ahead
 
-- A proliferation of AI‑generated “slop” videos—bizarre, low‑effort yet alarmingly convincing clips—are being mass‑produced and monetized by creators flooding the internet, illustrating how absurd digital content can become profitable in our AI‑driven era. ([Washington Post](https://www.washingtonpost.com/technology/2025/08/17/ai-video-slop-creators/)) <!-- Draft news summary by ChatGPT -->
+- **The Washington Post's Drew Harwell** explored the [rise of "AI slop" videos](https://www.washingtonpost.com/technology/2025/08/17/ai-video-slop-creators/), a low-effort, often surreal subgenre that you've probably noticed proliferating on your favorite social network lately. Harwell gives a nice overview of who exactly is making this stuff and what the long-term effects on the web's creative economy might be. (Spoiler alert: They're probably not good.)
 
-- **Tech deals on the way?** OpenAI is in final talks to facilitate a $6 billion secondary share sale by employees and former staffers to investors such as SoftBank and Thrive Capital—potentially catapulting the company’s valuation to $500 billion, making it the most valuable private firm globally—surpassing even SpaceX. ([New York Times](https://www.nytimes.com/2025/08/19/technology/openai-chatgpt-stock-sale-valuation.html)) <!-- Draft news summary by ChatGPT --> | The White House is considering taking a 10% stake in Intel. SoftBank is eyeing a bid as well. <!-- Check for followups. Links tk. -->
+- **Mental health pros are growing concerned about "AI psychosis."** While the term isn't yet a formal clinical diagnosis, it's increasingly being used to describe alarming patterns of delusional thinking, emotional dependency, and distorted reality emerging in some users after extended interaction with chatbots. ([Washington Post](https://www.washingtonpost.com/health/2025/08/19/ai-psychosis-chatgpt-explained-mental-health/))
 
-- Mental health specialists caution that while “AI psychosis” isn’t a clinical diagnosis, it’s an increasingly used term to describe alarming patterns of delusional thinking, emotional dependency, and distorted reality emerging in some users after extended interaction with chatbots––a phenomenon they say is real enough to warrant urgent attention, further study, and guidance for those at risk. ([Washington Post](https://www.washingtonpost.com/health/2025/08/19/ai-psychosis-chatgpt-explained-mental-health/)) <!-- Draft news summary by ChatGPT -->
+- **Google’s unveiled** its [new lineup](https://www.wired.com/story/google-pixel-10-series-pixel-watch-4-pixel-buds-2a/) of Pixel devices, emphasizing [AI features](https://www.cnbc.com/2025/08/21/google-pixel-10-launch-a-strategic-ai-play-with-gemini.html) to take on Apple's iPhone more directly. Early reviews have generally ben [favorable](https://www.androidcentral.com/phones/google-pixel/google-pixel-10-hands-on). Nevertheless, the Washington Post's Shira Ovide says Google faces an uphill battle for market share. From its early launch, the search giant has positioned the Pixel line as an Android flagship. But Ovide notes that historically [hasn't translated](https://www.washingtonpost.com/technology/2025/08/19/best-android-phone-google-pixel-apple-samsung/) into strong sales.
 
 ### Odds & Ends
 
-- **Google’s unveiled** its [new lineup](https://www.wired.com/story/google-pixel-10-series-pixel-watch-4-pixel-buds-2a/) of Pixel devices, emphasizing [AI features](https://www.cnbc.com/2025/08/21/google-pixel-10-launch-a-strategic-ai-play-with-gemini.html) to take on Apple's iPhone more directly. Early reviews have generally ben [favorable](https://www.androidcentral.com/phones/google-pixel/google-pixel-10-hands-on). But the Washington Post's Shira Ovide says Google nevertheless faces an uphill battle for market share. From early on, the search giant has positioned the Pixel line as an Android flagship. But Ovide notes that historically [hasn't translated](https://www.washingtonpost.com/technology/2025/08/19/best-android-phone-google-pixel-apple-samsung/) into strong sales.
-
-- Salon highlights the extreme “gourmand” perfume trend through the comeback of Cry Baby Milk—a strawberry‑milk‑and‑caramel scent reselling for up to $800–$1,000—turning nostalgic childhood aromas into a high‑end collectible with cult status. Bottles of strawberry milk perfume are selling for $1,000 a piece. ([Salon](https://www.salon.com/2025/08/12/how-strawberry-milk-went-luxe/)) <!-- Draft news summary by ChatGPT -->
+- **Food-inspired "gourmand" fragrances are hot.** Singer Melanie Martinez is re-releasing her Cry Baby Milk perfume, which has hints of strawberries, milk, and caramel scent. It has been off the market since 2020, but demand remains so high, old bottles of it have been selling online for over $1,000 each. ([Salon](https://www.salon.com/2025/08/12/how-strawberry-milk-went-luxe/))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
